methods.flowerpot.FlowerCase.scala.error
Compilation error:
FlowerCase:53: error: not found: value squareFlower
  squareFlower()
  ^